apps/production/photoprism/scott/patch-photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  # issue a cert with cert-manager for scott.willeke.com
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  # TODO: create a custom transformer config that adds a tls.hosts and path for a specified domain like:
  #   ingressDomain:
  #     ingress: photoprism-ingress
  #     domains:
  #       - domain: photos.scott.willeke.com
  #       - photos.activescott.com
  #     backend:
  #       name: photoprism-service
  #       port: web-ui
  tls:
    - hosts:
        - photos.scott.willeke.com
      secretName: photos-scott-willeke-com-tls
  rules:
    - host: photos.scott.willeke.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism-service
                # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
                port:
                  name: web-ui
